# scattpack

./: README.md  pyproject.toml
src/scattpack/: __init__.py  constants.py  mixture_data.py  utils.py
src/scattpack/q0/: __init__.py  static.py
